objects/Product2.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_CropType__c</fullName>
        <label>Crop Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Potato</fullName>
                </value>
                <value>
                    <fullName>Sugarcane</fullName>
                </value>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Corn (Winter)</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Corn (Summer)</fullName>
                </value>
                <value>
                    <fullName>HF</fullName>
                </value>
                <value>
                    <fullName>Soy</fullName>
                </value>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
                <value>
                    <fullName>Pasture</fullName>
                </value>
                <value>
                    <fullName>Wheat</fullName>
                </value>
                <value>
                    <fullName>Reforestation</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Artichoke</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Bean</fullName>
                </value>
                <value>
                    <fullName>Beans Safrinha</fullName>
                </value>
                <value>
                    <fullName>Cane</fullName>
                </value>
                <value>
                    <fullName>Carrot</fullName>
                </value>
                <value>
                    <fullName>Cassava</fullName>
                </value>
                <value>
                    <fullName>Castor bean</fullName>
                </value>
                <value>
                    <fullName>Cocoa</fullName>
                </value>
                <value>
                    <fullName>Coconut</fullName>
                </value>
                <value>
                    <fullName>Coffee-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Corn Safrinha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Keywords__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC DH Keywords</label>
        <translateData>true</translateData>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Micronutrients1__c</fullName>
        <label>Micronutrient</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boron</fullName>
                </value>
                <value>
                    <fullName>Chlorine</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Iron</fullName>
                </value>
                <value>
                    <fullName>Manganese</fullName>
                </value>
                <value>
                    <fullName>Molybdenum</fullName>
                </value>
                <value>
                    <fullName>Silicone</fullName>
                </value>
                <value>
                    <fullName>Zinc</fullName>
                </value>
                <value>
                    <fullName>Calcium</fullName>
                </value>
                <value>
                    <fullName>Magnesium</fullName>
                </value>
                <value>
                    <fullName>Sulfur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Micronutrients__c</fullName>
        <description>This field was created as part of story to handle/manage value for Micronutrient</description>
        <label>Micronutrient</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boron</fullName>
                </value>
                <value>
                    <fullName>Chlorine</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Iron</fullName>
                </value>
                <value>
                    <fullName>Manganese</fullName>
                </value>
                <value>
                    <fullName>Molybdenum</fullName>
                </value>
                <value>
                    <fullName>Silicone</fullName>
                </value>
                <value>
                    <fullName>Zinc</fullName>
                </value>
                <value>
                    <fullName>Calcium</fullName>
                </value>
                <value>
                    <fullName>Magnesium</fullName>
                </value>
                <value>
                    <fullName>Sulfur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Nitrogen__c</fullName>
        <label>Nitrogen(N)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-5%</fullName>
                </value>
                <value>
                    <fullName>06-10%</fullName>
                </value>
                <value>
                    <fullName>11-15%</fullName>
                </value>
                <value>
                    <fullName>16-20%</fullName>
                </value>
                <value>
                    <fullName>21-25%</fullName>
                </value>
                <value>
                    <fullName>26-30%</fullName>
                </value>
                <value>
                    <fullName>31-35%</fullName>
                </value>
                <value>
                    <fullName>36-40%</fullName>
                </value>
                <value>
                    <fullName>41-45%</fullName>
                </value>
                <value>
                    <fullName>46-50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Phosphorous__c</fullName>
        <label>Phosphorous (P)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-5%</fullName>
                </value>
                <value>
                    <fullName>06-10%</fullName>
                </value>
                <value>
                    <fullName>11-15%</fullName>
                </value>
                <value>
                    <fullName>16-20%</fullName>
                </value>
                <value>
                    <fullName>21-25%</fullName>
                </value>
                <value>
                    <fullName>26-30%</fullName>
                </value>
                <value>
                    <fullName>31-35%</fullName>
                </value>
                <value>
                    <fullName>36-40%</fullName>
                </value>
                <value>
                    <fullName>41-45%</fullName>
                </value>
                <value>
                    <fullName>46-50%</fullName>
                </value>
                <value>
                    <fullName>51-55%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Potassium__c</fullName>
        <label>Potassium (K)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-5%</fullName>
                </value>
                <value>
                    <fullName>06-10%</fullName>
                </value>
                <value>
                    <fullName>11-15%</fullName>
                </value>
                <value>
                    <fullName>16-20%</fullName>
                </value>
                <value>
                    <fullName>21-25%</fullName>
                </value>
                <value>
                    <fullName>26-30%</fullName>
                </value>
                <value>
                    <fullName>31-35%</fullName>
                </value>
                <value>
                    <fullName>36-40%</fullName>
                </value>
                <value>
                    <fullName>41-45%</fullName>
                </value>
                <value>
                    <fullName>46-50%</fullName>
                </value>
                <value>
                    <fullName>51-55%</fullName>
                </value>
                <value>
                    <fullName>56-60%</fullName>
                </value>
                <value>
                    <fullName>61-65%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_ProductComposition__c</fullName>
        <formula>IF(
  OR(
    NOT(ISBLANK(PMC_CPQ_Nitrogen__c)) &amp;&amp; PMC_CPQ_Nitrogen__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Phosphorous__c)) &amp;&amp; PMC_CPQ_Phosphorous__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Potassium__c)) &amp;&amp; PMC_CPQ_Potassium__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Boron__c)) &amp;&amp; PMC_CPQ_Boron__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Calcium__c)) &amp;&amp; PMC_CPQ_Calcium__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Chlorine__c)) &amp;&amp; PMC_CPQ_Chlorine__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Cobalt__c)) &amp;&amp; PMC_CPQ_Cobalt__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Copper__c)) &amp;&amp; PMC_CPQ_Copper__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Iron__c)) &amp;&amp; PMC_CPQ_Iron__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Magnesium__c)) &amp;&amp; PMC_CPQ_Magnesium__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Manganese__c)) &amp;&amp; PMC_CPQ_Manganese__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Molybdenum__c)) &amp;&amp; PMC_CPQ_Molybdenum__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Sulfur__c)) &amp;&amp; PMC_CPQ_Sulfur__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Zinc__c)) &amp;&amp; PMC_CPQ_Zinc__c &gt; 0,
    NOT(ISBLANK(PMC_CPQ_Silicone__c)) &amp;&amp; PMC_CPQ_Silicone__c&gt; 0

  ),
TEXT(PMC_CPQ_Nitrogen__c * 100) &amp; &quot;-&quot; &amp; TEXT(PMC_CPQ_Phosphorous__c * 100) &amp; &quot;-&quot; &amp; TEXT(PMC_CPQ_Potassium__c * 100) &amp; &quot; &quot; &amp; 
IF(PMC_CPQ_Boron__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Boron__c * 100) &amp; &quot;%B&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Calcium__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Calcium__c * 100) &amp; &quot;%Ca&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Chlorine__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Chlorine__c * 100) &amp; &quot;%Cl&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Cobalt__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Cobalt__c * 100) &amp; &quot;%Co&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Copper__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Copper__c * 100) &amp; &quot;%Cu&quot;, &quot;&quot;) &amp;
IF(PMC_CPQ_Iron__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Iron__c * 100) &amp; &quot;%Fe&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Magnesium__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Magnesium__c * 100) &amp; &quot;%Mg&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Manganese__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Manganese__c * 100) &amp; &quot;%Mn&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Molybdenum__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Molybdenum__c * 100) &amp; &quot;%Mo&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Sulfur__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Sulfur__c * 100) &amp; &quot;%S&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Zinc__c &gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Zinc__c * 100) &amp; &quot;%Zn&quot;, &quot;&quot;) &amp; 
IF(PMC_CPQ_Silicone__c&gt; 0, &quot;, &quot; &amp; TEXT(PMC_CPQ_Silicone__c* 100) &amp; &quot;%Si&quot;, &quot;&quot;),&quot;&quot; 
)</formula>
        <label>PMC DH ProductComposition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Synonyms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC DH Synonyms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag field, which will indicate if this product record is already processed or not</description>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetAmendmentBehavior__c</fullName>
        <description>Indicates how assets representing this product behave on amendments.</description>
        <inlineHelpText>Select a behavior when amending assets representing this product. By default, asset quantities cannot decrease unless an upgrade is added, and no refund is applied.</inlineHelpText>
        <label>Asset Amendment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Allow Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetConversion__c</fullName>
        <description>Determines how this product is converted to asset.</description>
        <inlineHelpText>Indicates how this product is converted to asset.</inlineHelpText>
        <label>Asset Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One per quote line</fullName>
                    <default>true</default>
                    <label>One per quote line</label>
                </value>
                <value>
                    <fullName>One per unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>Quantity in one batch for products sold in batches. Quantity entered in quote line will be divided by this number.</description>
        <inlineHelpText>Non-blank value designates this product is sold in batches. Enter quantity in each batch. Quantity entered in quote will be divided by this value and rounded up to the nearest integer.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Determines how often this product will be invoiced.</description>
        <inlineHelpText>Determines how often this product will be invoiced.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPricingField__c</fullName>
        <description>Field used to calculate block pricing.</description>
        <inlineHelpText>Field used to calculate block pricing.</inlineHelpText>
        <label>Block Pricing Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Component__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as a component, excluding it from selection in product lookup.</description>
        <inlineHelpText>Marks this product as a component, excluding it from selection in product lookup.</inlineHelpText>
        <label>Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity.</description>
        <inlineHelpText>Discount rate compounded by quantity.</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationEvent__c</fullName>
        <description>Specifies when user is prompted to configure this product.</description>
        <inlineHelpText>Use this to control when Configure Products screen shows up for this product. Choose &quot;Add&quot; to limit to initial configuration. Choose &quot;Edit&quot; to subsequent configuration.</inlineHelpText>
        <label>Configuration Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ConfigurationType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFieldSet__c</fullName>
        <description>The API name of the field set that will be used for this product during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used for this product during configuration.</inlineHelpText>
        <label>Configuration Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OptionConfiguration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFields__c</fullName>
        <description>Additional fields collected during configuration of this product. All of these fields must exist on Product Option and Quote Line objects.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Configuration Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFormTitle__c</fullName>
        <description>Title of the configuration form rendered from specified configuration fields.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Title of the configuration form rendered from specified configuration fields.</inlineHelpText>
        <label>Configuration Form Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationType__c</fullName>
        <description>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</description>
        <inlineHelpText>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</inlineHelpText>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationValidator__c</fullName>
        <description>JavaScript function used to validate configuration of this product.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>JavaScript function used to validate configuration of this product.</inlineHelpText>
        <label>Configuration Validator</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredCodePattern__c</fullName>
        <description>Pattern used to generate product code (SKU) for configured products.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Pattern used to generate product code (SKU) for configured products.</inlineHelpText>
        <label>Configured Code Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredDescriptionPattern__c</fullName>
        <description>Pattern used to generate dynamic product description for configured products.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Pattern used to generate dynamic product description for configured products.</inlineHelpText>
        <label>Configured Description Pattern</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether cost for this product may be modified on individual quotes.</description>
        <inlineHelpText>Controls whether cost for this product may be modified on individual quotes.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule used as a Cost Schedule with this product.</description>
        <inlineHelpText>Discount schedule used as a Cost Schedule with this product.</inlineHelpText>
        <label>Cost Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Products (Cost Schedule)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomConfigurationPage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Configuration Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Configuration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerCommunityAvailability__c</fullName>
        <description>Determines availability of this product in Customer Community.</description>
        <inlineHelpText>Select how this product should be available in Customer Communities.</inlineHelpText>
        <label>Customer Community Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only when already owned</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultPricingTable__c</fullName>
        <label>Default Pricing Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segmented</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specifies the starting quantity of the product when added.</description>
        <inlineHelpText>Specify the starting quantity of the product when added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DescriptionLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates this product&apos;s description is locked (not editable on the quote).</description>
        <inlineHelpText>Flag that indicates this product&apos;s description is locked (not editable on the quote).</inlineHelpText>
        <label>Lock Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount category assigned to this product.</description>
        <inlineHelpText>Specify discount category for this product.</inlineHelpText>
        <label>Discount Category</label>
        <referenceTo>SBQQ__DiscountCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule for use with this product</description>
        <inlineHelpText>Discount schedule for use with this product</inlineHelpText>
        <label>Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quantity Discounted Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicPricingConstraint__c</fullName>
        <description>Specifies constraints on dynamically calculated pricing.</description>
        <inlineHelpText>Use to place constraints on dynamically calculated prices.</inlineHelpText>
        <label>Percent Of Total Constraint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List price is minimum</fullName>
                </value>
                <value>
                    <fullName>List price is maximum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EnableLargeConfiguration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable large bundle configuration.</description>
        <inlineHelpText>Should be enabled if you experience performance errors during bundle configuration. Bundle will be processed asynchronously.</inlineHelpText>
        <label>Enable Large Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from percent of total maintenance calculations.</description>
        <inlineHelpText>Check to always exclude this product from percent of total calculations (normally non-subscription products are included in percent of total calculations).</inlineHelpText>
        <label>Exclude From Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this product should be excluded from transfer to the Opportunity.</description>
        <inlineHelpText>Indicates this product should not be transferred to the opportunity.</inlineHelpText>
        <label>Exclude From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExternallyConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates that configuring this Product automatically launches the External Configuration URL, defined in Salesforce CPQ settings.</description>
        <inlineHelpText>When checked, indicates that configuring this Product automatically launches the External Configuration URL, defined in Salesforce CPQ settings.</inlineHelpText>
        <label>Externally Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on the adjusted quote line if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on the adjusted quote line if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HasConfigurationAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks to see if Product has Configuration Attributes</description>
        <label>Has Configuration Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HasConsumptionSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Product is assigned to at least 1 active Consumption Schedule</description>
        <inlineHelpText>Indicates if this product has at least one consumption schedule</inlineHelpText>
        <label>Has Consumption Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from appearing on the quote PDF.</description>
        <inlineHelpText>Excludes this product from appearing on the quote PDF.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HidePriceInSearchResults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product price should be displayed in the Product Search Results.</description>
        <inlineHelpText>Select checkbox to hide this product&apos;s price in the Product Search Results.</inlineHelpText>
        <label>Hide Price in Search Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__IncludeInMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Includes products in percent of total calculations that are normally excluded (e.g.: subscription products).</description>
        <inlineHelpText>Check to always include this product in percent of total calculations (normally subscription products are excluded from percent of total calculations).</inlineHelpText>
        <label>Include In Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>